# tg

./: .gitignore  Cargo.toml  LICENSE  db.sql  flake.nix  log
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: fqbjdpy9jfai8gjyh8ivh1lab2vxdbx9-source  ibnkwcj88f10vlpz85s5qaw21vya9k10-source  zbwdcl8lx9v60580yqcr435j9g82j29f-source
examples/: dirs.rs  stress.rs  stress_insert.rs  usage.sh
src/: cli.rs  config.rs  fuse.rs  lib.rs  main.rs  utils.rs
src/sql/: db.sql  migrations.sql  mod.rs
