cargo-features = ["codegen-backend"]
[package]
name = "tg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
anyhow = { version = "1.0" }
libc = "0.2"
ctrlc = { version = "3.4", features = ["termination"] }
rusqlite = { version = "0.32", features = ["bundled"] }
fuse_mt = { version = "0.6.1" }
log = "0.4"
confy = "0.6.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
fake = "2.9"
rand = "0.8.5"

[profile.dev]
debug = 0
codegen-backend = "cranelift"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
