cargo-features = ["codegen-backend"]
[package]
name = "tg"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0"                                                                  # Get .config/tg and .local/share/tg dirs
anyhow = { version = "1.0" }                                                         # Better error handling
libc = "0.2"                                                                         # FFI utils
ctrlc = { version = "3.4", features = ["termination"] }                              # Handle termination signals
rusqlite = { version = "0.32", features = ["bundled"] }                              # Rust SQLite wrapper
fuse_mt = { version = "0.6.1" }                                                      # FUSE reimplementation in Rust
log = "0.4"                                                                          # Logging facade
confy = "0.6.1"                                                                      # Configuration file manager
serde = { version = "1.0", features = ["derive"] }                                   # Serialize/Deserialize structs
bpaf = { version = "0.9.12", features = ["bright-color", "autocomplete", "derive"] } # CLI argument parsing, alternative to Clap
bpaf_derive = "0.5.10"                                                               # bpaf derive macros

[dev-dependencies]
fake = "2.9"        # Generate random words
rand = "0.8.5"      # RNG provider

[profile.dev]
debug = 0
codegen-backend = "cranelift"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
